/*
 * Copyright (c) Huawei Technologies Co., Ltd. 2020-2021. All rights reserved.
 * secPaver is licensed under the Mulan PSL v2.
 * You can use this software according to the terms and conditions of the Mulan PSL v2.
 * You may obtain a copy of Mulan PSL v2 at:
 *     http://license.coscl.org.cn/MulanPSL2
 * THIS SOFTWARE IS PROVIDED ON AN "AS IS" BASIS, WITHOUT WARRANTIES OF ANY KIND, EITHER EXPRESS OR
 * IMPLIED, INCLUDING BUT NOT LIMITED TO NON-INFRINGEMENT, MERCHANTABILITY OR FIT FOR A PARTICULAR
 * PURPOSE.
 * See the Mulan PSL v2 for more details.
 */

syntax = "proto3";

package engine;

service EngineMgr {
    rpc ListEngine(Req) returns (ListEngineAck);
    rpc InfoEngine(Req) returns (InfoEngineAck);
}

message Req {
    string Name = 1;
}

message EngineInfo {
    string name = 1;
    string desc = 2;
}

message ListEngineAck {
    repeated EngineInfo engineInfos = 1;
}

message InfoEngineAck {
    EngineInfo baseInfo = 1;
}
